2008-08-14  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/modules/files.c: Don't just use
	g_file_get_contents() because some files might be quite big.
	Instead only get the maximum size we would normally index for each
	file which is "Text" or a "Development" file.

2008-08-14  Carlos Garnacho  <carlos@imendio.com>

	Add FileMove DBus method to tracker-indexer.

	* data/dbus/tracker-indexer.xml: Define new method.
	* data/sqlite-stored-procs.sql: Add MoveService and
	MoveServiceChildren, stored procedures that actually switch paths in
	the DB.
	* src/libtracker-common/tracker-utils.[ch] (tracker_string_replace):
	Misc fix, that function should take const strings.
	* src/libtracker-db/tracker-db-manager.c (function_replace): Add a SQL
	function to replace a substring with other.
	* src/tracker-indexer/tracker-indexer-db.[ch]
	(tracker_db_move_service):
	* src/tracker-indexer/tracker-indexer.[ch]
	(tracker_indexer_file_move): Implement moving files in
	tracker-indexer.

2008-08-14  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-parser.[ch]: Fixed the way we
	handle memory with the hash words table here. We now also don't
	create the index word in memory before checking if we are
	filtering words and if it is a stop word only to then free it
	again which we were doing.
	
	* src/libtracker-db/tracker-db-index.c: (tracker_db_index_flush):
	If the index is not open when we try to flush, try and open it
	first. 
	
	* src/tracker-extract/tracker-extract-tiff.c:
	(tracker_extract_tiff): 
	* tests/libtracker-db/tracker-db-dbus-test.c:
	(test_dbus_query_result_to_ptr_array):  Fixed compiler warnings.
	
	* src/tracker-indexer/tracker-indexer.c: Fixed a nasty crash I
	introduced last commit and clean up the merge function for words
	tables. Plus make sure we free basename and dirname in
	delete_item(), this was quite a leak.
	
	* src/tracker-utils/tracker-files.c: (main): Fixed printing a %d
	as a %s.
	