@@ -1,3 +1,9 @@
+2008-08-14  Mikael Ottela   <mikael.ottela@ixonos.com>
+
+	* src/tracker-extract/tracker-extract-tiff.c:
+	(tracker_extract_tiff): Restored variables used conditionally by
+	XMP extraction, previously removed because of compiler warnings.	
+
 2008-08-14  Martyn Russell  <martyn@imendio.com>
 
 	* src/tracker-indexer/modules/files.c: Don't just use
